[package]
name = "inmem_img"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-multipart = "0.4.0-beta.5"
actix-rt = "2.2.0"

futures = "0.3.15"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
dashmap = "4.0.2"
derive_more = "0.99.16"

log = "0.4.14"
simple_logger = "1.11.0"
rand = "0.8.4"
